Update copy for FB compliance: Removed guaranteed/risk-free phrasing in favor of math-driven edge

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Arbitrage Calculator Pro & PhD Betting System — Risk-Free Sports Investment</title>
+    <title>Arbitrage Calculator Pro & PhD Betting System — Math-Driven Sports Investment</title>
     <meta name="description"
         content="Professional-grade arbitrage calculator and PhD-level betting system. Guaranteed risk-free profits through mathematical exploitation of bookmaker odds.">
 
@@ -59,12 +59,11 @@
                 <i class="fa-solid fa-bolt"></i> Used by 500+ Professional Bettors
             </div>
             <h1 class="hero__title">
-                Stop Gambling.<br>
-                <span class="hero__title--gradient">Start Investing.</span>
+                Betting,<br>
+                <span class="hero__title--gradient">Engineered.</span>
             </h1>
             <p class="hero__subtitle">
-                Transform sports betting into a predictable income stream using <strong>risk-free arbitrage</strong> and
-                <strong>PhD-level probabilistic models</strong>. Our tools do the math — you collect the profit.
+                Transform sports betting into a structured portfolio using <strong>math-driven arbitrage</strong> and <strong>PhD-level probabilistic models</strong>. Math-driven edge for disciplined bettors.
             </p>
             <div class="hero__actions">
                 <a href="https://whop.com/arbitrage-calculator-pro-8/arbitrage-calculator-pro/" target="_blank"
@@ -84,8 +83,8 @@
                 </div>
                 <div class="stat__divider"></div>
                 <div class="stat">
-                    <span class="stat__number">0%</span>
-                    <span class="stat__label">Risk with Arbitrage</span>
+                    <span class="stat__number"><i class="fa-solid fa-calculator"></i></span>
+                    <span class="stat__label">Defined-Risk Approach</span>
                 </div>
                 <div class="stat__divider"></div>
                 <div class="stat">
@@ -105,11 +104,10 @@
     <section id="arbitrage" class="section">
         <div class="section__container">
             <div class="section__header">
-                <span class="section__badge section__badge--blue"><i class="fa-solid fa-shield-halved"></i> Zero
-                    Risk</span>
+                <span class="section__badge section__badge--blue"><i class="fa-solid fa-shield-halved"></i> Math-Driven Edge</span>
                 <h2 class="section__title">Arbitrage Calculator <span class="text--gradient-blue">Pro</span></h2>
                 <p class="section__desc">Exploit price discrepancies between bookmakers. Cover every outcome.
-                    <strong>Profit is mathematically guaranteed</strong> — regardless of who wins.</p>
+                    <strong>Outcomes are mathematically defined</strong> — regardless of who wins.</p>
             </div>
 
             <!-- How It Works Visual -->
@@ -132,7 +130,7 @@
                     <div class="step-card__num">03</div>
                     <div class="step-card__icon"><i class="fa-solid fa-sack-dollar"></i></div>
                     <h4>Collect Profit</h4>
-                    <p>Place the bets. No matter who wins, you earn a guaranteed return on your investment.</p>
+                    <p>Place the bets. No matter who wins, your return is defined before the event starts.</p>
                 </div>
             </div>
 
@@ -161,7 +159,7 @@
                                 <span class="math-card__tag">Core Formula</span>
                                 <h4>Optimal Stake Allocation</h4>
                             </div>
-                            <p>To guarantee equal profit regardless of outcome, distribute your total investment <span
+                            <p>To equalize returns regardless of outcome, distribute your total investment <span
                                     class="math-inline">\(T\)</span> as follows:</p>
                             <div class="math-display">
                                 $$S_i = \frac{T \cdot \dfrac{1}{O_i}}{\displaystyle\sum_{j=1}^{n} \dfrac{1}{O_j}}$$
@@ -174,14 +172,14 @@
                         <div class="math-card math-card--wide">
                             <div class="math-card__header">
                                 <span class="math-card__tag">Profit Formula</span>
-                                <h4>Guaranteed Return on Investment</h4>
+                                <h4>Calculated Return on Investment</h4>
                             </div>
-                            <p>Your guaranteed profit percentage from any arbitrage opportunity is:</p>
+                            <p>Your calculated return percentage from any arbitrage opportunity is:</p>
                             <div class="math-display">
                                 $$\text{ROI} = \left(\frac{1}{\displaystyle\sum_{i=1}^{n} \frac{1}{O_i}} - 1\right)
                                 \times 100\%$$
                             </div>
-                            <p class="math-note">The smaller the margin sum, the larger your guaranteed profit. Values
+                            <p class="math-note">The smaller the margin sum, the larger your built-in edge. Values
                                 below 0.95 are excellent opportunities.</p>
                         </div>
                     </div>
@@ -234,7 +232,7 @@
 
                             <div class="derivation-step">
                                 <span class="derivation-step__num">Step 3</span>
-                                <strong>Verify Guaranteed Payout</strong>
+                                <strong>Verify Calculated Payout</strong>
                                 <div class="payout-table">
                                     <div class="payout-row payout-row--header">
                                         <span>Scenario</span>
@@ -262,11 +260,11 @@
                             <div class="result-highlight">
                                 <div class="result-highlight__icon"><i class="fa-solid fa-trophy"></i></div>
                                 <div>
-                                    <span class="result-highlight__label">Guaranteed Profit</span>
+                                    <span class="result-highlight__label">Calculated Profit</span>
                                     <span class="result-highlight__value">+$62.26 — 6.23% ROI</span>
                                 </div>
                             </div>
-                            <p class="result-highlight__note">No matter who wins. Zero risk. Pure mathematics.</p>
+                            <p class="result-highlight__note">No matter who wins. Execution-dependent edge. Pure mathematics.</p>
                         </div>
                     </div>
                 </div>
@@ -500,7 +498,7 @@
                     <p class="pricing-card__description">Arbitrage Calculator Pro + PhD Betting System</p>
                 </div>
                 <div class="pricing-card__features">
-                    <div class="pricing-feature"><i class="fa-solid fa-check"></i> Risk-free arbitrage calculator</div>
+                    <div class="pricing-feature"><i class="fa-solid fa-check"></i> Math-driven arbitrage calculator</div>
                     <div class="pricing-feature"><i class="fa-solid fa-check"></i> PhD-level probabilistic engine</div>
                     <div class="pricing-feature"><i class="fa-solid fa-check"></i> Fractional Kelly staking optimizer
                     </div>
