Update hero stats and meta description for further FB compliance: removed excessive guarantee implications

--- a/index.html
+++ b/index.html
@@ -56,14 +56,14 @@
     <section class="hero">
         <div class="hero__container">
             <div class="hero__badge">
-                <i class="fa-solid fa-bolt"></i> Used by 500+ Professional Bettors
+                <i class="fa-solid fa-bolt"></i> Built for disciplined bettors
             </div>
             <h1 class="hero__title">
                 Betting,<br>
                 <span class="hero__title--gradient">Engineered.</span>
             </h1>
             <p class="hero__subtitle">
-                Transform sports betting into a structured portfolio using <strong>math-driven arbitrage</strong> and <strong>PhD-level probabilistic models</strong>. Math-driven edge for disciplined bettors.
+                Transform sports betting into a structured portfolio using <strong>math-driven arbitrage</strong> and <strong>PhD-level probabilistic models</strong>. Math-driven edge. Executed right.
             </p>
             <div class="hero__actions">
                 <a href="https://whop.com/arbitrage-calculator-pro-8/arbitrage-calculator-pro/" target="_blank"
@@ -78,8 +78,8 @@
             <!-- Stats Row -->
             <div class="hero__stats">
                 <div class="stat">
-                    <span class="stat__number" data-target="6.2">6.2%</span>
-                    <span class="stat__label">Avg. ROI per Arb</span>
+                    <span class="stat__number" data-target="0.5-3">0.5-3%</span>
+                    <span class="stat__label">Typical Arb Edge</span>
                 </div>
                 <div class="stat__divider"></div>
                 <div class="stat">
@@ -88,13 +88,13 @@
                 </div>
                 <div class="stat__divider"></div>
                 <div class="stat">
-                    <span class="stat__number">+EV</span>
-                    <span class="stat__label">Every Single Bet</span>
+                    <span class="stat__number">Edge > 0</span>
+                    <span class="stat__label">Model-validated picks</span>
                 </div>
                 <div class="stat__divider"></div>
                 <div class="stat">
-                    <span class="stat__number">24/7</span>
-                    <span class="stat__label">Market Scanning</span>
+                    <span class="stat__number">Fast</span>
+                    <span class="stat__label">Rapid Workflow</span>
                 </div>
             </div>
         </div>
