Update arb edge stat to 0.5-6% and finalize FB risk-aware copy

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Arbitrage Calculator Pro & PhD Betting System — Math-Driven Sports Investment</title>
     <meta name="description"
-        content="Professional-grade arbitrage calculator and PhD-level betting system. Guaranteed risk-free profits through mathematical exploitation of bookmaker odds.">
+        content="Arbitrage calculator + PhD-level models to identify pricing inefficiencies and +EV spots. Execution-dependent.">
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -78,13 +78,13 @@
             <!-- Stats Row -->
             <div class="hero__stats">
                 <div class="stat">
-                    <span class="stat__number" data-target="0.5-3">0.5-3%</span>
+                    <span class="stat__number">0.5-6%</span>
                     <span class="stat__label">Typical Arb Edge</span>
                 </div>
                 <div class="stat__divider"></div>
                 <div class="stat">
                     <span class="stat__number"><i class="fa-solid fa-calculator"></i></span>
-                    <span class="stat__label">Defined-Risk Approach</span>
+                    <span class="stat__label">Execution-aware</span>
                 </div>
                 <div class="stat__divider"></div>
                 <div class="stat">
@@ -129,7 +129,7 @@
                 <div class="step-card">
                     <div class="step-card__num">03</div>
                     <div class="step-card__icon"><i class="fa-solid fa-sack-dollar"></i></div>
-                    <h4>Collect Profit</h4>
+                    <h4>Capture the Edge</h4>
                     <p>Place the bets. No matter who wins, your return is defined before the event starts.</p>
                 </div>
             </div>
@@ -269,6 +269,7 @@
                     </div>
                 </div>
 
+                <p class="math-note" style="text-align: center; margin-bottom: 1.5rem;"><i class="fa-solid fa-circle-info"></i> Note: Arbitrage depends on execution timing, bookmaker rules, and stake limits.</p>
                 <div class="section__cta">
                     <a href="https://whop.com/arbitrage-calculator-pro-8/arbitrage-calculator-pro/" target="_blank"
                         rel="noopener noreferrer" class="btn btn--primary btn--lg btn--glow">
@@ -486,7 +487,7 @@
     <section id="pricing" class="section section--cta">
         <div class="section__container">
             <div class="section__header">
-                <h2 class="section__title">Ready to <span class="text--gradient-green">Profit</span>?</h2>
+                <h2 class="section__title">Ready to Build an <span class="text--gradient-green">Edge</span>?</h2>
                 <p class="section__desc">Get instant access to both the Arbitrage Calculator Pro and the PhD Betting
                     System. One subscription. Two powerful tools.</p>
             </div>
