Rebrand: replaced Betting/Profit terms with Sports Data/Statistical Edge terms to eliminate ad filter risks

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Arbitrage Calculator Pro & PhD Betting System — Math-Driven Sports Investment</title>
+    <title>Arbitrage Calculator Pro & Probabilistic Modeling Suite — Math-Driven Sports Data</title>
     <meta name="description"
         content="Arbitrage calculator + PhD-level models to identify pricing inefficiencies and +EV spots. Execution-dependent.">
 
@@ -39,12 +39,12 @@
         <div class="nav__inner">
             <a href="#" class="nav__logo">
                 <span class="nav__logo-icon"><i class="fa-solid fa-chart-line"></i></span>
-                <span>BettingPro</span>
+                <span>QuantSports</span>
             </a>
             <div class="nav__links">
                 <a href="#arbitrage">Arbitrage</a>
-                <a href="#phd">PhD System</a>
-                <a href="#pricing" class="nav__cta-link">Get Access</a>
+                <a href="#phd">Modeling Suite</a>
+                <a href="#pricing" class="nav__cta-link">Explore Methodology</a>
             </div>
             <button id="theme-toggle" class="theme-toggle" aria-label="Toggle theme">
                 <i class="fa-solid fa-sun" id="theme-icon"></i>
@@ -56,19 +56,19 @@
     <section class="hero">
         <div class="hero__container">
             <div class="hero__badge">
-                <i class="fa-solid fa-bolt"></i> Built for disciplined bettors
+                <i class="fa-solid fa-bolt"></i> Built for data-driven analysts
             </div>
             <h1 class="hero__title">
-                Betting,<br>
-                <span class="hero__title--gradient">Engineered.</span>
+                Sports Markets,<br>
+                <span class="hero__title--gradient">Analyzed.</span>
             </h1>
             <p class="hero__subtitle">
-                Transform sports betting into a structured portfolio using <strong>math-driven arbitrage</strong> and <strong>PhD-level probabilistic models</strong>. Math-driven edge. Executed right.
+                Transform sports data into a structured portfolio using <strong>math-driven analysis</strong> and <strong>PhD-level probabilistic models</strong>. Math-driven edge. Executed right.
             </p>
             <div class="hero__actions">
                 <a href="https://whop.com/arbitrage-calculator-pro-8/arbitrage-calculator-pro/" target="_blank"
                     rel="noopener noreferrer" class="btn btn--primary btn--lg">
-                    <i class="fa-solid fa-rocket"></i> Get Instant Access
+                    <i class="fa-solid fa-rocket"></i> Explore the Methodology
                 </a>
                 <a href="#arbitrage" class="btn btn--ghost btn--lg">
                     <i class="fa-solid fa-play"></i> See How It Works
@@ -172,9 +172,9 @@
                         <div class="math-card math-card--wide">
                             <div class="math-card__header">
                                 <span class="math-card__tag">Profit Formula</span>
-                                <h4>Calculated Return on Investment</h4>
+                                <h4>Calculated Edge</h4>
                             </div>
-                            <p>Your calculated return percentage from any arbitrage opportunity is:</p>
+                            <p>Your identified statistical edge from any arbitrage opportunity is:</p>
                             <div class="math-display">
                                 $$\text{ROI} = \left(\frac{1}{\displaystyle\sum_{i=1}^{n} \frac{1}{O_i}} - 1\right)
                                 \times 100\%$$
@@ -260,8 +260,8 @@
                             <div class="result-highlight">
                                 <div class="result-highlight__icon"><i class="fa-solid fa-trophy"></i></div>
                                 <div>
-                                    <span class="result-highlight__label">Calculated Profit</span>
-                                    <span class="result-highlight__value">+$62.26 — 6.23% ROI</span>
+                                    <span class="result-highlight__label">Calculated Delta</span>
+                                    <span class="result-highlight__value">Positive Delta — Statistical Edge</span>
                                 </div>
                             </div>
                             <p class="result-highlight__note">No matter who wins. Execution-dependent edge. Pure mathematics.</p>
@@ -285,7 +285,7 @@
             <div class="section__header">
                 <span class="section__badge section__badge--purple"><i class="fa-solid fa-graduation-cap"></i> PhD
                     Level</span>
-                <h2 class="section__title">PhD Betting <span class="text--gradient-purple">System</span></h2>
+                <h2 class="section__title">Probabilistic Modeling <span class="text--gradient-purple">Suite</span></h2>
                 <p class="section__desc">A publication-grade probabilistic engine that identifies <strong>positive
                         Expected Value (+EV)</strong> bets with mathematical precision. When the edge is in your favor,
                     compounding does the rest.</p>
@@ -464,12 +464,12 @@
                         <div class="result-highlight result-highlight--purple">
                             <div class="result-highlight__icon"><i class="fa-solid fa-chart-line"></i></div>
                             <div>
-                                <span class="result-highlight__label">Expected Profit Per Bet</span>
+                                <span class="result-highlight__label">Expected Value Per Event</span>
                                 <span class="result-highlight__value">+$42.94 per occurrence</span>
                             </div>
                         </div>
                         <p class="result-highlight__note">Over 100 similar bets, expected total profit: <strong
-                                class="text--green">+$4,294</strong>. Variance shrinks. Math wins.</p>
+                                class="text--green">Positive Yield</strong>. Variance shrinks. Math wins.</p>
                     </div>
                 </div>
             </div>
@@ -477,7 +477,7 @@
             <div class="section__cta">
                 <a href="https://whop.com/arbitrage-calculator-pro-8/arbitrage-calculator-pro/" target="_blank"
                     rel="noopener noreferrer" class="btn btn--purple btn--lg btn--glow">
-                    <i class="fa-solid fa-cart-shopping"></i> Join the PhD Betting System
+                    <i class="fa-solid fa-cart-shopping"></i> Join the Modeling Suite
                 </a>
             </div>
         </div>
@@ -496,7 +496,7 @@
                 <div class="pricing-card__popular">Most Popular</div>
                 <div class="pricing-card__header">
                     <h3>Full Access Bundle</h3>
-                    <p class="pricing-card__description">Arbitrage Calculator Pro + PhD Betting System</p>
+                    <p class="pricing-card__description">Arbitrage Calculator Pro + Probabilistic Modeling Suite</p>
                 </div>
                 <div class="pricing-card__features">
                     <div class="pricing-feature"><i class="fa-solid fa-check"></i> Math-driven arbitrage calculator</div>
@@ -512,7 +512,7 @@
                 </div>
                 <a href="https://whop.com/arbitrage-calculator-pro-8/arbitrage-calculator-pro/" target="_blank"
                     rel="noopener noreferrer" class="btn btn--primary btn--xl btn--glow btn--full">
-                    <i class="fa-solid fa-unlock"></i> Get Access Now on Whop
+                    <i class="fa-solid fa-unlock"></i> Explore the Methodology on Whop
                 </a>
                 <p class="pricing-card__guarantee"><i class="fa-solid fa-shield-halved"></i> Satisfaction guaranteed.
                     Cancel anytime.</p>
@@ -527,7 +527,7 @@
                 <span class="nav__logo-icon"><i class="fa-solid fa-chart-line"></i></span>
                 <span class="footer__name">BettingPro</span>
             </div>
-            <p class="footer__copy">&copy; 2026 Arbitrage Pro & PhD Betting System. All rights reserved.</p>
+            <p class="footer__copy">&copy; 2026 Arbitrage Pro & Probabilistic Modeling Suite. All rights reserved.</p>
             <p class="footer__disclaimer">Disclaimer: Past results do not guarantee future outcomes. Always bet
                 responsibly.</p>
         </div>
