--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Arbitrage Calculator Pro & Probabilistic Modeling Suite — Math-Driven Sports Data</title>
+    <title>QuantSports Analytics — Math-Driven Market Efficiency</title>
     <meta name="description"
         content="Arbitrage calculator + PhD-level models to identify pricing inefficiencies and +EV spots. Execution-dependent.">
 
@@ -59,11 +59,11 @@
                 <i class="fa-solid fa-bolt"></i> Built for data-driven analysts
             </div>
             <h1 class="hero__title">
-                Sports Markets,<br>
-                <span class="hero__title--gradient">Analyzed.</span>
+                Market Efficiency,<br>
+                <span class="hero__title--gradient">Quantified.</span>
             </h1>
             <p class="hero__subtitle">
-                Transform sports data into a structured portfolio using <strong>math-driven analysis</strong> and <strong>PhD-level probabilistic models</strong>. Math-driven edge. Executed right.
+                Analyze sports data through <strong>probabilistic modeling</strong> and <strong>quantitative analysis</strong>. Identify market discrepancies with mathematical precision.
             </p>
             <div class="hero__actions">
                 <a href="https://whop.com/arbitrage-calculator-pro-8/arbitrage-calculator-pro/" target="_blank"
@@ -130,7 +130,7 @@
                     <div class="step-card__num">03</div>
                     <div class="step-card__icon"><i class="fa-solid fa-sack-dollar"></i></div>
                     <h4>Capture the Edge</h4>
-                    <p>Place the bets. No matter who wins, your return is defined before the event starts.</p>
+                    <p>Execute the positions. No matter who wins, your return is defined before the event starts.</p>
                 </div>
             </div>
 
@@ -221,12 +221,12 @@
 
                             <div class="derivation-step">
                                 <span class="derivation-step__num">Step 2</span>
-                                <strong>Calculate Stakes</strong> (Total Investment: $1,000)
+                                <strong>Calculate Stakes</strong> (Total Investment: 1,000 units)
                                 <div class="math-display math-display--sm">
-                                    $$S_A = \frac{1000 \times 0.4762}{0.9413} = \$505.84$$
+                                    $$S_A = \frac{1000 \times 0.4762}{0.9413} = \505.84 units$$
                                 </div>
                                 <div class="math-display math-display--sm">
-                                    $$S_B = \frac{1000 \times 0.4651}{0.9413} = \$494.16$$
+                                    $$S_B = \frac{1000 \times 0.4651}{0.9413} = \494.16 units$$
                                 </div>
                             </div>
 
@@ -242,15 +242,15 @@
                                     </div>
                                     <div class="payout-row">
                                         <span>Player A Wins</span>
-                                        <span>$505.84 × 2.10</span>
-                                        <span class="text--green">$1,062.26</span>
-                                        <span class="text--green">+$62.26</span>
+                                        <span>505.84 units × 2.10</span>
+                                        <span class="text--green">1,062.26 units</span>
+                                        <span class="text--green">+62.26 units</span>
                                     </div>
                                     <div class="payout-row">
                                         <span>Player B Wins</span>
-                                        <span>$494.16 × 2.15</span>
-                                        <span class="text--green">$1,062.44</span>
-                                        <span class="text--green">+$62.44</span>
+                                        <span>494.16 units × 2.15</span>
+                                        <span class="text--green">1,062.44 units</span>
+                                        <span class="text--green">+62.44 units</span>
                                     </div>
                                 </div>
                             </div>
@@ -327,7 +327,7 @@
                             <span class="math-card__tag math-card__tag--purple">Core</span>
                             <h4>Expected Value (EV)</h4>
                         </div>
-                        <p>A bet has positive expected value when your estimated probability multiplied by the payout
+                        <p>An opportunity has positive expected value when your estimated probability multiplied by the payout
                             exceeds your stake:</p>
                         <div class="math-display">
                             $$EV = \underbrace{P_{\text{win}} \cdot (O - 1)}_{\text{expected gain}} - \underbrace{(1 -
@@ -337,8 +337,8 @@
                         <div class="math-display">
                             $$\text{Edge} = P_{\text{win}} \times O - 1$$
                         </div>
-                        <p class="math-note">We only bet when <span class="math-inline text--green">\(\text{Edge} >
-                                0\)</span>. A 5% edge means for every $100 wagered, you expect $5 profit long-term.</p>
+                        <p class="math-note">We only execute when <span class="math-inline text--green">\(\text{Edge} >
+                                0\)</span>. A 5% edge means for every 100 units utilized, you expect 5 units created long-term.</p>
                     </div>
 
                     <div class="math-card math-card--purple">
@@ -346,7 +346,7 @@
                             <span class="math-card__tag math-card__tag--purple">Staking</span>
                             <h4>Fractional Kelly Criterion</h4>
                         </div>
-                        <p>Determines the mathematically optimal fraction of your bankroll to wager on each bet:</p>
+                        <p>Determines the mathematically optimal fraction of your bankroll to wager on each position:</p>
                         <div class="math-display">
                             $$f^* = c \cdot \frac{b \cdot p - q}{b}$$
                         </div>
@@ -442,19 +442,19 @@
 
                         <div class="derivation-step">
                             <span class="derivation-step__num">Step 2</span>
-                            <strong>Calculate Kelly Stake</strong> (Bankroll: $10,000, c = 0.25)
+                            <strong>Calculate Kelly Stake</strong> (Bankroll: 10,000 units, c = 0.25)
                             <div class="math-display math-display--sm">
                                 $$f^* = 0.25 \times \frac{1.80 \times 0.42 - 0.58}{1.80} = 0.25 \times \frac{0.756 -
                                 0.58}{1.80} = 0.25 \times 0.0978 = 2.44\%$$
                             </div>
-                            <p class="math-note">Optimal stake = <strong>$244</strong> (2.44% of bankroll)</p>
+                            <p class="math-note">Optimal stake = <strong>244 units</strong> (2.44% of bankroll)</p>
                         </div>
 
                         <div class="derivation-step">
                             <span class="derivation-step__num">Step 3</span>
                             <strong>Expected Long-Term Value</strong>
                             <div class="math-display math-display--sm">
-                                $$EV = 0.42 \times (2.80 - 1) \times 244 - 0.58 \times 244 = \$184.46 - \$141.52 =
+                                $$EV = 0.42 \times (2.80 - 1) \times 244 - 0.58 \times 244 = \184.46 units - \141.52 units =
                                 +\$42.94$$
                             </div>
                         </div>
@@ -465,10 +465,10 @@
                             <div class="result-highlight__icon"><i class="fa-solid fa-chart-line"></i></div>
                             <div>
                                 <span class="result-highlight__label">Expected Value Per Event</span>
-                                <span class="result-highlight__value">+$42.94 per occurrence</span>
+                                <span class="result-highlight__value">+42.94 units per occurrence</span>
                             </div>
                         </div>
-                        <p class="result-highlight__note">Over 100 similar bets, expected total profit: <strong
+                        <p class="result-highlight__note">Over 100 similar events, expected total profit: <strong
                                 class="text--green">Positive Yield</strong>. Variance shrinks. Math wins.</p>
                     </div>
                 </div>
@@ -527,7 +527,7 @@
                 <span class="nav__logo-icon"><i class="fa-solid fa-chart-line"></i></span>
                 <span class="footer__name">BettingPro</span>
             </div>
-            <p class="footer__copy">&copy; 2026 Arbitrage Pro & Probabilistic Modeling Suite. All rights reserved.</p>
+            <p class="footer__copy">&copy; 2026 QuantSports Modeling Suite. All rights reserved.</p>
             <p class="footer__disclaimer">Disclaimer: Past results do not guarantee future outcomes. Always bet
                 responsibly.</p>
         </div>
