Compliance fix: Final sweep replacing 'gamble responsibly', 'EV bets', and 'Betting System' with educational equivalents

--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
                     Level</span>
                 <h2 class="section__title">Probabilistic Modeling <span class="text--gradient-purple">Suite</span></h2>
                 <p class="section__desc">A publication-grade probabilistic engine that identifies <strong>positive
-                        Expected Value (+EV)</strong> bets with mathematical precision. When the edge is in your favor,
+                        Expected Value (+EV)</strong> opportunities with mathematical precision. When the edge is in your favor,
                     compounding does the rest.</p>
             </div>
 
@@ -487,8 +487,7 @@
         <div class="section__container">
             <div class="section__header">
                 <h2 class="section__title">Ready to Build an <span class="text--gradient-green">Edge</span>?</h2>
-                <p class="section__desc">Get instant access to both the Arbitrage Calculator Pro and the PhD Betting
-                    System. One subscription. Two powerful tools.</p>
+                <p class="section__desc">Get instant access to both the Arbitrage Calculator Pro and the Probabilistic Modeling Suite. One subscription. Two powerful tools.</p>
             </div>
 
             <div class="pricing-card">
@@ -528,7 +527,7 @@
             </div>
             <p class="footer__copy">&copy; 2026 QuantSports Modeling Suite. All rights reserved.</p>
             <p class="footer__disclaimer">Disclaimer: Statistical models carry inherent risks. Past performance of a model is not indicative of future market outcomes.</p>
-            <p class="footer__disclaimer">18+ only. Gamble responsibly. This tool is educational/analytical and does not guarantee outcomes.</p>
+            <p class="footer__disclaimer">This tool is for educational and analytical purposes only. Trading sports data involves risk. Not financial advice.</p>
         </div>
     </footer>
 
